--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="description" content="Découvrez le web-documentaire interactif sur le métier de développeur full stack par Timéo DC. Explorez l'alternance, les mythes et la réalité du développement web.">
   
   <link rel="stylesheet" href="include/css/player.css">
+  <link rel="stylesheet" href="include/css/sitemap.css">
 
 </head>
 
@@ -116,6 +117,84 @@
   </div>
 </div>
 
+
+
+
+
+
+
+
+
+
+<!-- Overlay Sitemap -->
+  <div id="sitemap-overlay">
+    <div class="sitemap-content">
+      <h2>Plan du site</h2>
+      
+      <div class="sitemap-grid">
+        <a href="presentation.html" class="sitemap-card">
+          <div class="sitemap-card-inner">
+            <div class="sitemap-icon">📋</div>
+            <h3>Présentation</h3>
+            <p>Découvrez le métier de développeur full stack</p>
+          </div>
+        </a>
+
+        <a href="vivre-l'alternance-de-plus-pres.html" class="sitemap-card">
+          <div class="sitemap-card-inner">
+            <div class="sitemap-icon">🎓</div>
+            <h3>Vivre l'alternance de plus près</h3>
+            <p>L'expérience de l'alternance au quotidien</p>
+          </div>
+        </a>
+
+        <a href="la-face-cachée-d'un-developpeur.html" class="sitemap-card">
+          <div class="sitemap-card-inner">
+            <div class="sitemap-icon">🔍</div>
+            <h3>La face cachée d'un développeur</h3>
+            <p>Les coulisses du développement web</p>
+          </div>
+        </a>
+
+        <a href="un-metier-au-coeur-des-mythes.html" class="sitemap-card">
+          <div class="sitemap-card-inner">
+            <div class="sitemap-icon">💭</div>
+            <h3>Un métier au cœur des mythes</h3>
+            <p>Démystifier les idées reçues</p>
+          </div>
+        </a>
+
+        <a href="conseil.html" class="sitemap-card">
+          <div class="sitemap-card-inner">
+            <div class="sitemap-icon">💡</div>
+            <h3>Conseil</h3>
+            <p>Recommandations et astuces</p>
+          </div>
+        </a>
+
+        <a href="podcast.html" class="sitemap-card">
+          <div class="sitemap-card-inner">
+            <div class="sitemap-icon">🎙️</div>
+            <h3>Podcast</h3>
+            <p>Écoutez nos interviews</p>
+          </div>
+        </a>
+      </div>
+
+      <button id="close-sitemap">Fermer</button>
+    </div>
+  </div>
+
+
+
+
+
+
+
+
+
+
+  
 <footer>
   <div class="left-links">
     <a href="#credits">Crédits</a>
@@ -136,5 +215,6 @@
 </footer>
 
   <script src="include/js/script.js" defer></script>
+  <script src="include/js/sitemap.js" defer></script>
 </body>
 </html>
