--- a/la-face-cachée-d'un-developpeur.html
+++ b/la-face-cachée-d'un-developpeur.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Découvrez le web-documentaire interactif sur le métier de développeur full stack par Timéo DC. Explorez l'alternance, les mythes et la réalité du développement web.">
   
   <link rel="stylesheet" href="include/css/player.css">
-  <link rel="stylesheet" href="include/css/la-face-cachée-d'un-developpeur.css">
+  <link rel="stylesheet" href="include/css/vivre-l'alternance-de-plus-pres.css">
   <link rel="stylesheet" href="include/css/sitemap.css">
 
 </head>
@@ -93,30 +93,40 @@
     </a>
   </div>
 
-<div id="credits-overlay">
-  <div class="overlay-content">
-    <h2>Crédits</h2>
 
-    <p>Une production de <a href="https://tim-1st.github.io/portfolio/" target="_blank" rel="noopener noreferrer">Timéo DC</a></p>
-    <p>Projet dirigé par : <a href="https://www.linkedin.com/in/vincent-gruyer/" target="_blank" rel="noopener noreferrer">Mr Vincent Gruyer</a></p>
-    <p>Partie technique : <span>Mr Texier</span></p>
-    
-    <p class="participation">Avec la participation de : </p>
-      <a href="https://www.linkedin.com/in/hizia-rawat/" target="_blank" rel="noopener noreferrer">Hizia Rawat</a>
-      <a href="https://www.linkedin.com/in/filytoure/" target="_blank" rel="noopener noreferrer">Fily Toure</a>
-      <a href="https://www.linkedin.com/in/yves-nsabimana/" target="_blank" rel="noopener noreferrer">Yves Nsabimana</a>
-      <a class="ajust" href="https://www.linkedin.com/in/gaëtan-bruno-jean-baptiste-398b64346/" target="_blank" rel="noopener noreferrer">Gaëtan BRUNO JEAN BAPTISTE</a>
-    <p>Intervenant : <a href="https://www.linkedin.com/in/samad-abdul-developpeur-web-full-stack/" target="_blank" rel="noopener noreferrer">Samad Abdul</a></p>
 
-    <div id="logos-container">
-      <img src="include/logos/CY-IUT_coul240.png" alt="Logo CY-IUT">
-      <img src="include/logos/logo 2.png" alt="Logo partenaire">
-      <img src="include/logos/cy-cergy-paris-universite-coul_1611572232688-png-3906356523" alt="Logo CY Cergy Paris Université">
+
+
+
+
+
+
+
+  <!-- Overlay Crédits -->
+  <div id="credits-overlay">
+    <div class="overlay-content">
+      <h2>Crédits</h2>
+
+      <p>Une production de <a href="https://tim-1st.github.io/portfolio/" target="_blank" rel="noopener noreferrer">Timéo DC</a></p>
+      <p>Projet dirigé par : <a href="https://www.linkedin.com/in/vincent-gruyer/" target="_blank" rel="noopener noreferrer">Mr Vincent Gruyer</a></p>
+      <p>Partie technique : <span>Mr Texier</span></p>
+      
+      <p class="participation">Avec la participation de : </p>
+        <a href="https://www.linkedin.com/in/hizia-rawat/" target="_blank" rel="noopener noreferrer">Hizia Rawat</a>
+        <a href="https://www.linkedin.com/in/filytoure/" target="_blank" rel="noopener noreferrer">Fily Toure</a>
+        <a href="https://www.linkedin.com/in/yves-nsabimana/" target="_blank" rel="noopener noreferrer">Yves Nsabimana</a>
+        <a class="ajust" href="https://www.linkedin.com/in/gaëtan-bruno-jean-baptiste-398b64346/" target="_blank" rel="noopener noreferrer">Gaëtan BRUNO JEAN BAPTISTE</a>
+      <p>Intervenant : <a href="https://www.linkedin.com/in/samad-abdul-developpeur-web-full-stack/" target="_blank" rel="noopener noreferrer">Samad Abdul</a></p>
+
+      <div id="logos-container">
+        <img src="include/logos/CY-IUT_coul240.png" alt="Logo CY-IUT">
+        <img src="include/logos/logo 2.png" alt="Logo partenaire">
+        <img src="include/logos/cy-cergy-paris-universite-coul_1611572232688-png-3906356523" alt="Logo CY Cergy Paris Université">
+      </div>
+
+      <button id="close-overlay">Fermer</button>
     </div>
-
-    <button id="close-overlay">Fermer</button>
   </div>
-</div>
 
 
 
@@ -127,7 +137,7 @@
 
 
 
-<!-- Overlay Sitemap -->
+  <!-- Overlay Sitemap -->
   <div id="sitemap-overlay">
     <div class="sitemap-content">
       <h2>Plan du site</h2>
