--- a/la-face-cachée-d'un-developpeur.html
+++ b/la-face-cachée-d'un-developpeur.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Découvrez le web-documentaire interactif sur le métier de développeur full stack par Timéo DC. Explorez l'alternance, les mythes et la réalité du développement web.">
   
   <link rel="stylesheet" href="include/css/player.css">
-  <link rel="stylesheet" href="include/css/vivre-l'alternance-de-plus-pres.css">
+  <link rel="stylesheet" href="include/css/la-face-cachée-d'un-developpeur.css">
   <link rel="stylesheet" href="include/css/sitemap.css">
 
 </head>
@@ -73,7 +73,7 @@
       </div>
     </a>
 
-    <a class="boutton" href="#podcast">
+    <a class="boutton" href="podcast.html">
       <div class="cercle"></div>
       <div class="content">
         <h2>Podcast</h2>
@@ -102,7 +102,7 @@
 
 
 
-  <!-- Overlay Crédits -->
+  <!-- Overlay Credits -->
   <div id="credits-overlay">
     <div class="overlay-content">
       <h2>Crédits</h2>
