--- a/podcast.html
+++ b/podcast.html
@@ -72,7 +72,7 @@
       </div>
     </a>
 
-    <a class="boutton" href="#podcast">
+    <a class="boutton" href="podcast.html">
       <div class="cercle"></div>
       <div class="content">
         <h2>Podcast</h2>
