--- a/un-metier-au-coeur-des-mythes.html
+++ b/un-metier-au-coeur-des-mythes.html
@@ -73,7 +73,7 @@
       </div>
     </a>
 
-    <a class="boutton" href="#podcast">
+    <a class="boutton" href="podcast.html">
       <div class="cercle"></div>
       <div class="content">
         <h2>Podcast</h2>
