--- a/index.html
+++ b/index.html
@@ -224,7 +224,10 @@
   </div>
 </footer>
 
-  <script src="include/js/script.js" defer></script>
+  <script src="include/js/button.js" defer></script>
   <script src="include/js/sitemap.js" defer></script>
+  <script src="include/js/credits.js" defer></script>
+  <script src="include/js/settings.js" defer></script>
+
 </body>
 </html>
