--- a/la-face-cachée-d'un-developpeur.html
+++ b/la-face-cachée-d'un-developpeur.html
@@ -225,7 +225,10 @@
   </div>
 </footer>
 
-  <script src="include/js/script.js" defer></script>
+  <script src="include/js/button.js" defer></script>
   <script src="include/js/sitemap.js" defer></script>
+  <script src="include/js/credits.js" defer></script>
+  <script src="include/js/settings.js" defer></script>
+
 </body>
 </html>
