--- a/un-metier-au-coeur-des-mythes.html
+++ b/un-metier-au-coeur-des-mythes.html
@@ -225,7 +225,10 @@
   </div>
 </footer>
 
-  <script src="include/js/script.js" defer></script>
+  <script src="include/js/button.js" defer></script>
   <script src="include/js/sitemap.js" defer></script>
+  <script src="include/js/credits.js" defer></script>
+  <script src="include/js/settings.js" defer></script>
+
 </body>
 </html>
