--- a/conseil.html
+++ b/conseil.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="include/css/player.css">
   <link rel="stylesheet" href="include/css/conseil.css">
   <link rel="stylesheet" href="include/css/sitemap.css">
+  <link rel="stylesheet" href="include/css/overlay-credits.css">
 
 </head>
 
