--- a/podcast.html
+++ b/podcast.html
@@ -10,6 +10,7 @@
   
   <link rel="stylesheet" href="include/css/player.css">
   <link rel="stylesheet" href="include/css/sitemap.css">
+  <link rel="stylesheet" href="include/css/overlay-credits.css">
 
 </head>
 
