--- a/presentation.html
+++ b/presentation.html
@@ -11,7 +11,8 @@
   <link rel="stylesheet" href="include/css/player.css">
   <link rel="stylesheet" href="include/css/presentation.css">
   <link rel="stylesheet" href="include/css/sitemap.css">
-
+  <link rel="stylesheet" href="include/css/overlay-credits.css">
+  
 </head>
 
 <body>
