--- a/un-metier-au-coeur-des-mythes.html
+++ b/un-metier-au-coeur-des-mythes.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="include/css/player.css">
   <link rel="stylesheet" href="include/css/un-metier-au-coeur-des-mythes.css">
   <link rel="stylesheet" href="include/css/sitemap.css">
+  <link rel="stylesheet" href="include/css/overlay-credits.css">
 
 </head>
 
