--- a/presentation.html
+++ b/presentation.html
@@ -53,7 +53,7 @@
       </div>
     </a>
 
-    <a class="boutton" href="la-face-cachée-d'un-developpeur.html">
+    <a class="boutton" href="la-face-cachee-d'un-developpeur.html">
       <div class="cercle"></div>
       <div class="content" id="catégorie-ajust">
         <h2>La face cachée d'un développeur</h2>
@@ -186,7 +186,7 @@
           </div>
         </a>
 
-        <a href="la-face-cachée-d'un-developpeur.html" class="sitemap-card">
+        <a href="la-face-cachee-d'un-developpeur.html" class="sitemap-card">
           <div class="sitemap-card-inner">
             <div class="sitemap-icon">🔍</div>
             <h3>La face cachée d'un développeur</h3>
