--- a/la-face-cachee-d'un-developpeur.html
+++ b/la-face-cachee-d'un-developpeur.html
@@ -108,17 +108,16 @@
   <!-- Section vidéo avec chapitres -->
   <div class="video-section">
     <div class="video-wrapper">
-      <video id="mainVideo" controls>
-        <source src="include/sequances/La face cachée.mp4" type="video/mp4">
-        Votre navigateur ne supporte pas la lecture de vidéos.
-      </video>
+      <div class="video-container">
+        <div id="mainVideo"></div>
+      </div>
     </div>
 
     <div class="chapters">
       <button class="chapter-btn" data-time="0">Temps de codage</button>
       <button class="chapter-btn" data-time="47">Autres postes</button>
       <button class="chapter-btn" data-time="65">Aspect répétitif</button>
-      <button class="chapter-btn" data-time="88">Epreuve mantale</button>
+      <button class="chapter-btn" data-time="88">Epreuve mentale</button>
       <button class="chapter-btn" data-time="142">Temps de débug</button>
       <button class="chapter-btn" data-time="185">Aspect surprenant</button>
     </div>
@@ -314,7 +313,7 @@
   <script src="include/js/sitemap.js" defer></script>
   <script src="include/js/credits.js" defer></script>
   <script src="include/js/settings.js" defer></script>
-  <script src="include/js/sequance.js" defer></script>
+  <script src="include/js/sequances/metier.js" defer></script>
 
 </body>
 </html>
