--- a/conseil.html
+++ b/conseil.html
@@ -108,10 +108,9 @@
   <!-- Section vidéo avec chapitres -->
   <div class="video-section">
     <div class="video-wrapper">
-      <video id="mainVideo" controls>
-        <source src="include/sequances/Conseils.mp4" type="video/mp4">
-        Votre navigateur ne supporte pas la lecture de vidéos.
-      </video>
+      <div class="video-container">
+        <div id="mainVideo"></div>
+      </div>
     </div>
 
     <div class="chapters">
@@ -311,7 +310,7 @@
   <script src="include/js/sitemap.js" defer></script>
   <script src="include/js/credits.js" defer></script>
   <script src="include/js/settings.js" defer></script>
-  <script src="include/js/sequance.js" defer></script>
+  <script src="include/js/sequances/conseil.js" defer></script>
 
 </body>
 </html>
