--- a/vivre-l'alternance-de-plus-pres.html
+++ b/vivre-l'alternance-de-plus-pres.html
@@ -216,7 +216,7 @@
 
 
 
-  <!-- Overlay Sitemap -->
+    <!-- Overlay Sitemap -->
   <div id="sitemap-overlay">
     <div class="sitemap-content">
       <h2>Plan du site</h2>
@@ -225,7 +225,7 @@
         <a href="presentation.html" class="sitemap-card">
           <div class="sitemap-card-inner">
             <h3>Présentation</h3>
-            <p>Découvrez le métier de développeur full stack</p>
+            <p>Apprenez-en un peu plus sur l’intervenant</p>
           </div>
         </a>
 
@@ -260,7 +260,7 @@
         <a href="podcast.html" class="sitemap-card">
           <div class="sitemap-card-inner">
             <h3>Podcast</h3>
-            <p>Écoutez nos interviews</p>
+            <p>Écoutez notre Podcast</p>
           </div>
         </a>
       </div>
