--- a/podcast.html
+++ b/podcast.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="include/css/player.css">
   <link rel="stylesheet" href="include/css/sitemap.css">
   <link rel="stylesheet" href="include/css/overlay-credits.css">
+  <link rel="stylesheet" href="include/css/search.css">
 
 </head>
 
@@ -253,6 +254,7 @@
   <script src="include/js/sitemap.js" defer></script>
   <script src="include/js/credits.js" defer></script>
   <script src="include/js/settings.js" defer></script>
+  <script src="include/js/search.js" defer></script>
 
 </body>
 </html>
