--- a/un-metier-au-coeur-des-mythes.html
+++ b/un-metier-au-coeur-des-mythes.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="include/css/sitemap.css">
   <link rel="stylesheet" href="include/css/overlay-credits.css">
   <link rel="stylesheet" href="include/css/sequance.css">
+  <link rel="stylesheet" href="include/css/search.css">
 
 </head>
 
@@ -312,6 +313,7 @@
   <script src="include/js/sitemap.js" defer></script>
   <script src="include/js/credits.js" defer></script>
   <script src="include/js/settings.js" defer></script>
+  <script src="include/js/search.js" defer></script>
   <script src="include/js/sequances/stereotype.js" defer></script>
 
 </body>
