--- a/un-metier-au-coeur-des-mythes.html
+++ b/un-metier-au-coeur-des-mythes.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="include/css/presentation.css">
   <link rel="stylesheet" href="include/css/sitemap.css">
   <link rel="stylesheet" href="include/css/overlay-credits.css">
-  <link rel="stylesheet" href="include/css/sequance.css">
+  <link rel="stylesheet" href="include/css/sequence.css">
   <link rel="stylesheet" href="include/css/search.css">
 
 </head>
@@ -314,7 +314,7 @@
   <script src="include/js/credits.js" defer></script>
   <script src="include/js/settings.js" defer></script>
   <script src="include/js/search.js" defer></script>
-  <script src="include/js/sequances/stereotype.js" defer></script>
+  <script src="include/js/sequences/stereotype.js" defer></script>
 
 </body>
 </html>
