--- a/la-face-cachee-d'un-developpeur.html
+++ b/la-face-cachee-d'un-developpeur.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="include/css/presentation.css">
   <link rel="stylesheet" href="include/css/sitemap.css">
   <link rel="stylesheet" href="include/css/overlay-credits.css">
-  <link rel="stylesheet" href="include/css/sequance.css">
+  <link rel="stylesheet" href="include/css/sequence.css">
   <link rel="stylesheet" href="include/css/search.css">
 
 </head>
@@ -315,7 +315,7 @@
   <script src="include/js/credits.js" defer></script>
   <script src="include/js/settings.js" defer></script>
   <script src="include/js/search.js" defer></script>
-  <script src="include/js/sequances/metier.js" defer></script>
+  <script src="include/js/sequences/metier.js" defer></script>
 
 </body>
 </html>
