--- a/conseil.html
+++ b/conseil.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <title>Web-Doc Développeur Full Stack | Portfolio Timéo DC</title>
   
@@ -22,7 +22,7 @@
   <header>
     
     <div class="title-contenair">
-      <h1><a href="index.html">Web-Doc Développeur Full Stack</a></h1>
+      <h1><a href="presentation.html">Web-Doc Développeur Full Stack</a></h1>
       <p>By <a class="timeo" href="https://tim-1st.github.io/portfolio/" target="_blank" rel="noopener noreferrer">Timéo DC</a></p>
     </div>
         
