--- a/podcast.html
+++ b/podcast.html
@@ -47,7 +47,7 @@
       
     <div class="catégories">
 
-    <a class="boutton" href="presentation.html" alt="Présentation">
+    <a class="boutton" href="index.html" alt="Présentation">
       <div class="cercle"></div>
       <div class="content">
         <h2>Présentation</h2>
