--- a/un-metier-au-coeur-des-mythes.html
+++ b/un-metier-au-coeur-des-mythes.html
@@ -52,7 +52,7 @@
   <!-- Catégories à gauche -->
   <div class="catégories">
 
-    <a class="boutton" href="presentation.html" alt="Présentation">
+    <a class="boutton" href="index.html" alt="Présentation">
       <div class="cercle"></div>
       <div class="content">
         <h2>Présentation</h2>
