--- a/index.html
+++ b/index.html
@@ -25,17 +25,6 @@
       <h1><a href="index.html">Web-Doc Développeur Full Stack</a></h1>
       <p>By <a class="timeo" href="https://tim-1st.github.io/portfolio/" target="_blank" rel="noopener noreferrer">Timéo DC</a></p>
     </div>
-        
-    <div class="social-media">
-      <a href="https://www.linkedin.com/in/timéo-dc/" target="_blank" rel="noopener noreferrer" class="linkedin-container">
-        <img src="include/icon/linkedin-logo-transparent-free-png-1477946770.png" alt="Profil LinkedIn de Timéo DC - développeur full stack" loading="lazy">
-        <div class="linkedin-band">
-          <div class="linkedin-text-wrapper">
-            <span class="linkedin-text">Timéo DC</span>
-          </div>
-        </div>
-      </a>
-    </div>
 
   </header>
 
@@ -133,28 +122,6 @@
 
 
 
-  <!-- LinkedIn social media (mobile) -->
-  <div class="social-media">
-    <a href="https://www.linkedin.com/in/timéo-dc/" target="_blank" rel="noopener noreferrer" class="linkedin-container">
-      <img src="include/icon/linkedin-logo-transparent-free-png-1477946770.png" alt="Logo LinkedIn" loading="lazy">
-      <div class="linkedin-band">
-        <div class="linkedin-text-wrapper">
-          <span class="linkedin-text">Timéo DC</span>
-        </div>
-      </div>
-    </a>
-  </div>
-
-
-
-
-
-
-
-
-
-
-
   <!-- Overlay Credits -->
   <div id="credits-overlay">
     <div class="overlay-content">
@@ -199,7 +166,7 @@
         <div id="logos-container">
           <img src="include/logos/CY-IUT_coul240.png" alt="Logo CY-IUT">
           <img src="include/logos/logo 2.png" alt="Logo partenaire">
-          <img src="include/logos/cy-cergy-paris-universite-coul_1611572232688-png-3906356523" alt="Logo CY Cergy Paris Université">
+          <img src="include/logos/cy-cergy-paris-universite-coul_1611572234688-png-3906356523" alt="Logo CY Cergy Paris Université">
         </div>
 
         <button id="close-overlay">Fermer</button>
@@ -226,7 +193,7 @@
         <a href="presentation.html" class="sitemap-card">
           <div class="sitemap-card-inner">
             <h3>Présentation</h3>
-            <p>Apprenez-en un peu plus sur l’intervenant</p>
+            <p>Apprenez-en un peu plus sur l'intervenant</p>
           </div>
         </a>
 
