--- a/podcast.html
+++ b/podcast.html
@@ -4,9 +4,33 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   
-  <title>Web-Doc Développeur Full Stack | Portfolio Timéo DC</title>
-  
-  <meta name="description" content="Découvrez le web-documentaire interactif sur le métier de développeur full stack par Timéo DC. Explorez l'alternance, les mythes et la réalité du développement web.">
+  <title>Web-Doc Développeur Full Stack | Immersion avec Samad Abdul</title>
+  <meta name="title" content="Web-Doc Développeur Full Stack | Immersion avec Samad Abdul" />
+  <meta name="description" content="Découvrez le quotidien, les missions et le parcours d'un développeur Full Stack à travers ce web-documentaire interactif." />
+  <meta name="keywords" content="développeur full stack, web-doc, métier informatique, Samad Abdul, Timéo DC, BUT MMI Cergy" />
+  <meta name="author" content="Timéo DC" />
+  <link rel="canonical" href="https://tim-1st.github.io/portfolio/index.html" />
+
+  <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
+  <meta name="revisit-after" content="7 days" />
+  <meta name="language" content="French" />
+
+  <meta name="theme-color" content="#000000" /> <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://tim-1st.github.io/portfolio/index.html" />
+  <meta property="og:title" content="Web-Doc Développeur Full Stack | Immersion avec Samad Abdul" />
+  <meta property="og:description" content="Découvrez le quotidien d'un développeur Full Stack à travers ce web-documentaire interactif." />
+  <meta property="og:image" content="https://tim-1st.github.io/web-doc/include/medias/Développeur Full Stack, web-documentaire, métier informatique, programmation web, Timéo DC, Samad Abdul..png" />
+  <meta property="og:site_name" content="Web-Doc Développeur" />
+  <meta property="og:locale" content="fr_FR" />
+
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://tim-1st.github.io/portfolio/index.html" />
+  <meta property="twitter:title" content="Web-Doc Développeur Full Stack | Immersion avec Samad Abdul" />
+  <meta property="twitter:description" content="Découvrez le quotidien d'un développeur Full Stack." />
+  <meta property="twitter:image" content="https://tim-1st.github.io/web-doc/include/medias/Développeur Full Stack, web-documentaire, métier informatique, programmation web, Timéo DC, Samad Abdul..png" />
   
   <link rel="stylesheet" href="include/css/player.css">
   <link rel="stylesheet" href="include/css/sitemap.css">
