--- a/conseil.html
+++ b/conseil.html
@@ -31,6 +31,13 @@
   <meta property="twitter:title" content="Web-Doc Développeur Full Stack | Immersion avec Samad Abdul" />
   <meta property="twitter:description" content="Découvrez le quotidien d'un développeur Full Stack." />
   <meta property="twitter:image" content="https://tim-1st.github.io/web-doc/include/medias/Développeur Full Stack, web-documentaire, métier informatique, programmation web, Timéo DC, Samad Abdul..png" />
+
+  <link rel="stylesheet" href="include/css/player.css">
+  <link rel="stylesheet" href="include/css/presentation.css">
+  <link rel="stylesheet" href="include/css/sitemap.css">
+  <link rel="stylesheet" href="include/css/overlay-credits.css">
+  <link rel="stylesheet" href="include/css/sequence.css">
+  <link rel="stylesheet" href="include/css/search.css">
 </head>
 
 <body>
