--- a/conseil.html
+++ b/conseil.html
@@ -143,7 +143,7 @@
 
 
 
-  <!-- Overlay Credits -->
+    <!-- Overlay Credits -->
   <div id="credits-overlay">
     <div class="overlay-content">
       <h2>Crédits</h2>
@@ -182,8 +182,10 @@
         <p>Réalisation dans le cadre du BUT MMI Cergy Pontoise</p>
       </div>
 
+      <a href="podcast.html" target="_blank" rel="noopener noreferrer" class="podcast-link">Lien du Podcast</a>
+
       <div class="overlay-footer">
-        <p>Janvier-2026</p>
+        <p>© 2026 DE CASTRO Timéo - Tous droits réservés.</p>
         <div id="logos-container">
           <img src="include/logos/CY-IUT_coul240.png" alt="Logo CY-IUT">
           <img src="include/logos/logo 2.png" alt="Logo partenaire">
