--- a/podcast.html
+++ b/podcast.html
@@ -144,7 +144,7 @@
 
       <div class="section-intervenant">
         <p>Intervenant : <a href="https://www.linkedin.com/in/samad-abdul-developpeur-web-full-stack/" target="_blank" rel="noopener noreferrer">Samad Abdul</a></p>
-        <p>Droit d’utilisation de l’image accordé par Samad Abdul</p>
+        <p>Droit d'utilisation de l'image accordé par Samad Abdul</p>
       </div>
 
       <div class="section-info">
@@ -152,8 +152,10 @@
         <p>Réalisation dans le cadre du BUT MMI Cergy Pontoise</p>
       </div>
 
+      <a href="podcast.html" target="_blank" rel="noopener noreferrer" class="podcast-link">Lien du Podcast</a>
+
       <div class="overlay-footer">
-        <p>Janvier-2026</p>
+        <p>© 2026 DE CASTRO Timéo - Tous droits réservés.</p>
         <div id="logos-container">
           <img src="include/logos/CY-IUT_coul240.png" alt="Logo CY-IUT">
           <img src="include/logos/logo 2.png" alt="Logo partenaire">
