--- a/vivre-l'alternance-de-plus-pres.html
+++ b/vivre-l'alternance-de-plus-pres.html
@@ -183,8 +183,10 @@
         <p>Réalisation dans le cadre du BUT MMI Cergy Pontoise</p>
       </div>
 
+      <a href="podcast.html" target="_blank" rel="noopener noreferrer" class="podcast-link">Lien du Podcast</a>
+
       <div class="overlay-footer">
-        <p>Janvier-2026</p>
+        <p>© 2026 DE CASTRO Timéo - Tous droits réservés.</p>
         <div id="logos-container">
           <img src="include/logos/CY-IUT_coul240.png" alt="Logo CY-IUT">
           <img src="include/logos/logo 2.png" alt="Logo partenaire">
