--- a/podcast.html
+++ b/podcast.html
@@ -58,7 +58,8 @@
 
 
       
-    <div class="catégories">
+      <!-- Catégories à gauche -->
+  <div class="catégories">
 
     <a class="boutton" href="index.html" alt="Présentation">
       <div class="cercle"></div>
@@ -70,7 +71,7 @@
     <a class="boutton" href="vivre-l'alternance-de-plus-pres.html" alt="Vivre l'alternance de plus près">
       <div class="cercle"></div>
       <div class="content" id="catégorie-ajust">
-        <h2>Vivre l'alternance de plus près</h2>
+        <h2>L'alternance de plus près</h2>
       </div>
     </a>
 
@@ -88,10 +89,10 @@
       </div>
     </a>
 
-    <a class="boutton" href="conseil.html" alt="Conseil" alt="Conseil">
+    <a class="boutton" href="conseil.html" alt="Conseil">
       <div class="cercle"></div>
       <div class="content">
-        <h2>Conseil</h2>
+        <h2>Conseils</h2>
       </div>
     </a>
 
