--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <a class="boutton" href="vivre-l'alternance-de-plus-pres.html" alt="Vivre l'alternance de plus près">
       <div class="cercle"></div>
       <div class="content" id="catégorie-ajust">
-        <h2>Vivre l'alternance de plus près</h2>
+        <h2>L'alternance de plus près</h2>
       </div>
     </a>
 
@@ -96,7 +96,7 @@
     <a class="boutton" href="conseil.html" alt="Conseil">
       <div class="cercle"></div>
       <div class="content">
-        <h2>Conseil</h2>
+        <h2>Conseils</h2>
       </div>
     </a>
 
