--- a/un-metier-au-coeur-des-mythes.html
+++ b/un-metier-au-coeur-des-mythes.html
@@ -185,7 +185,7 @@
         <p>Réalisation dans le cadre du BUT MMI Cergy Pontoise</p>
       </div>
 
-      <a href="podcast.html" target="_blank" rel="noopener noreferrer" class="podcast-link">Lien du Podcast</a>
+      <a href="https://www.youtube.com/watch?v=D53shZzVeGA" target="_blank" rel="noopener noreferrer" class="podcast-link">Lien du Podcast</a>
 
       <div class="overlay-footer">
         <p>© 2026 DE CASTRO Timéo - Tous droits réservés.</p>
