--- a/podcast.html
+++ b/podcast.html
@@ -125,7 +125,7 @@
       <button class="chapter-btn" data-time="260">Ce que cela nous a apporté</button>
       <button class="chapter-btn" data-time="315">Retour critique</button>
       <button class="chapter-btn" data-time="447">BUT MMI</button>
-      <button class="chapter-btn" data-time="532">Un métier de rève</button>
+      <button class="chapter-btn" data-time="532">Un métier de rêve</button>
       <button class="chapter-btn" data-time="600">Dernier mot</button>
     </div>
   </div>
