--- a/podcast.html
+++ b/podcast.html
@@ -175,7 +175,7 @@
         <p>Réalisation dans le cadre du BUT MMI Cergy Pontoise</p>
       </div>
 
-      <a href="https://www.youtube.com/watch?v=D53shZzVeGA" target="_blank" rel="noopener noreferrer" class="podcast-link">Lien du Podcast</a>
+      <a href="https://www.youtube.com/watch?v=D53shZzVeGA" target="_blank" rel="noopener noreferrer" class="podcast-link">Lien du Podcast realisé par Fily Toure</a>
 
       <div class="overlay-footer">
         <p>© 2026 DE CASTRO Timéo - Tous droits réservés.</p>
