--- a/podcast.html
+++ b/podcast.html
@@ -36,6 +36,7 @@
   <link rel="stylesheet" href="include/css/sitemap.css">
   <link rel="stylesheet" href="include/css/overlay-credits.css">
   <link rel="stylesheet" href="include/css/search.css">
+  <link rel="stylesheet" href="include/css/sequence.css">
 
 </head>
 
@@ -108,6 +109,27 @@
 
 
 
+  <!-- Section vidéo avec chapitres -->
+  <div class="video-section">
+    <div class="video-wrapper">
+      <div class="video-container">
+        <div id="mainVideo"></div>
+      </div>
+    </div>
+
+    <div class="chapters">
+      <button class="chapter-btn" data-time="0">Présentation</button>
+      <button class="chapter-btn" data-time="52">Contexte</button>
+      <button class="chapter-btn" data-time="175">Difficultés rencontrées</button>
+      <button class="chapter-btn" data-time="208">Tournage</button>
+      <button class="chapter-btn" data-time="260">Ce que cela nous a apporté</button>
+      <button class="chapter-btn" data-time="315">Retour critique</button>
+      <button class="chapter-btn" data-time="447">BUT MMI</button>
+      <button class="chapter-btn" data-time="532">Un métier de rêve</button>
+      <button class="chapter-btn" data-time="600">Dernier mot</button>
+    </div>
+  </div>
+
 
 
 
@@ -153,7 +175,7 @@
         <p>Réalisation dans le cadre du BUT MMI Cergy Pontoise</p>
       </div>
 
-      <a href="podcast.html" target="_blank" rel="noopener noreferrer" class="podcast-link">Lien du Podcast</a>
+      <a href="https://www.youtube.com/watch?v=D53shZzVeGA" target="_blank" rel="noopener noreferrer" class="podcast-link">Lien du Podcast</a>
 
       <div class="overlay-footer">
         <p>© 2026 DE CASTRO Timéo - Tous droits réservés.</p>
@@ -261,6 +283,7 @@
   <script src="include/js/credits.js" defer></script>
   <script src="include/js/settings.js" defer></script>
   <script src="include/js/search.js" defer></script>
+  <script src="include/js/sequences/podcast.js" defer></script>
 
 </body>
 </html>
