--- a/podcast.html
+++ b/podcast.html
@@ -120,13 +120,13 @@
     <div class="chapters">
       <button class="chapter-btn" data-time="0">Présentation</button>
       <button class="chapter-btn" data-time="52">Contexte</button>
-      <button class="chapter-btn" data-time="175">Difficultés rencontrées</button>
+      <button class="chapter-btn" data-time="175">Les Difficultés</button>
       <button class="chapter-btn" data-time="208">Tournage</button>
-      <button class="chapter-btn" data-time="260">Ce que cela nous a apporté</button>
+      <button class="chapter-btn" data-time="260">L'apport du projet</button>
       <button class="chapter-btn" data-time="315">Retour critique</button>
       <button class="chapter-btn" data-time="447">BUT MMI</button>
-      <button class="chapter-btn" data-time="532">Un métier de rêve</button>
-      <button class="chapter-btn" data-time="600">Dernier mot</button>
+      <button class="chapter-btn" data-time="532">Le métier idéal</button>
+      <button class="chapter-btn" data-time="600">Conclusion</button>
     </div>
   </div>
 
